# api-comparison

./: .dockerignore  README.md  Taskfile.yaml  docker-compose.influx.yaml  run-heavy-load-tests.sh  run-light-load-tests.sh  run-load-tests.sh  run-tests.sh
.github/workflows/: CI-bun.yaml  CI-cs.yaml  CI-go.yaml  CI-node.yaml  CI-rust.yaml  publish-docker-image.yaml
api-specification/: openapi.yaml
bun-budget-api/: .gitignore  Dockerfile.dev  Dockerfile.prod  bun.lockb  docker-compose.dev.yaml  docker-compose.yaml  eslint.config.mjs  package.json
bun-budget-api/prisma/: schema.prisma
cs-budget-api/: .editorconfig  .gitignore  Dockerfile.dev  Dockerfile.prod  Program.cs  Taskfile.yaml  cs-budget-api.csproj  docker-compose.dev.yaml  docker-compose.yaml
docker-stats-recorder/: Dockerfile  docker-compose.yaml  go.mod  main.go
docs/: database-diagram.md  openapi-snippet.json  openapi.yaml
go-budget-api/: .air.toml  .golangci.yaml  Dockerfile.dev  Dockerfile.prod  README.md  Taskfile.yaml  atlas.hcl  docker-compose.dev.yaml  docker-compose.yaml  go.mod  go.sum
graphs/: docker-compose.yaml
js-budget-api/: .sequelizerc  Dockerfile.dev  docker-compose.yaml  eslint.config.mjs  openapi.yaml  package-lock.json  package.json  sequelize.config.js  webpack.config.js
k6/: .gitignore  Dockerfile.k6  api-tests.js  docker-compose-functional.yaml  docker-compose-load-heavy.yaml  docker-compose-load-light.yaml  docker-compose-load.yaml  docker-compose-test.yaml  functional-tests.js  helpers.js  load-tests-heavy.js  load-tests-light.js  load-tests.js
node-budget-api/: Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  sequelize.config.js
rust-budget-api/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md  Taskfile.yaml  docker-compose.dev.yaml  docker-compose.yaml
rust-budget-api/migrations/2024-10-21-134802_create_tables/: down.sql  up.sql
rust-budget-api/migrations/2024-10-21-140750_rename_password_to_password_hash/: down.sql  up.sql
rust-budget-api/src/: app.rs  database.rs  errors.rs  main.rs  middlewares.rs  models.rs  router.rs  routers.rs  schema.rs  services.rs
rust-budget-api/src/database/: errors.rs
rust-budget-api/src/router/: credential_router.rs  report_router.rs  transaction_router.rs
rust-budget-api/src/routers/: credential_router.rs  custom_validators.rs  report_router.rs  transaction_router.rs
rust-budget-api/src/services/: credentials_service.rs  errors.rs  report_service.rs  transaction_service.rs
rust-budget-api/src/services/report_service/: tests.rs
(+120 files in other folders)
