[package]
name = "rust-budget-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "=0.6.1", features = ["fs"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
] }
uuid = "1.8.0"
chrono = "0.4.38"
serde_json = "1.0.132"
lazy-regex = "2"
base64 = "0.22.1"
sha2 = "0.10.8"
lazy_static = "1.5.0"
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
