[package]
name = "rust-budget-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "=0.6.1", features = ["fs"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "numeric",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.132"
lazy-regex = "2"
base64 = "0.22.1"
sha2 = "0.10.8"
serde = { version = "1.0.213", features = ["derive"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.29"
axum-extra = "0.9.4"
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
